# localizate_aruco

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: c270.yaml  c270_1280x720.yaml  c270_640x480.yaml  camera_pos.yaml  withrobot_oCam_orange.yaml
launch/: gui_local_detector.launch  ocam.launch
python_scripts/: configuration.py  entities.py  localizer.py  main.py  stabilizeCam.py  staticMarkers.py
src/: streamer.cpp
